Fix gitattributes file path

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 Week02_BirthdaySMS/SimpleSMSWebpage/Scripts/* linguist-vendored
-Content/* linguist-vendored
+Week02_BirthdaySMS/SimpleSMSWebpage/Content/* linguist-vendored
