--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 Week02_BirthdaySMS/SimpleSMSWebpage/Scripts/* linguist-vendored
 Week02_BirthdaySMS/SimpleSMSWebpage/Content/* linguist-vendored
+Week02_BirthdaySMS/SimpleSMSWebapp/Scripts/* linguist-vendored
+Week02_BirthdaySMS/SimpleSMSWebapp/Content/* linguist-vendored
