--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@ Week02_BirthdaySMS/SimpleSMSWebpage/Scripts/* linguist-vendored
 Week02_BirthdaySMS/SimpleSMSWebpage/Content/* linguist-vendored
 Week02_BirthdaySMS/SimpleSMSWebapp/Scripts/* linguist-vendored
 Week02_BirthdaySMS/SimpleSMSWebapp/Content/* linguist-vendored
+Week02_*/SimpleSMSWebapp/Scripts/* linguist-vendored
+Week02_*/SimpleSMSWebapp/Content/* linguist-vendored
