--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,5 @@ Week02_BirthdaySMS/SimpleSMSWebpage/Scripts/* linguist-vendored
 Week02_BirthdaySMS/SimpleSMSWebpage/Content/* linguist-vendored
 Week02_BirthdaySMS/SimpleSMSWebapp/Scripts/* linguist-vendored
 Week02_BirthdaySMS/SimpleSMSWebapp/Content/* linguist-vendored
-Week02_*/SimpleSMSWebapp/Scripts/* linguist-vendored
-Week02_*/SimpleSMSWebapp/Content/* linguist-vendored
+Week02_KnockKnock/KnockKnockJokes/Scripts/* linguist-vendored
+Week02_KnockKnock/KnockKnockJokes/Content/* linguist-vendored
